fix: make the challengers images fit in the page to avoid scrollbar on wide screens

--- a/src/main/webapp/app/survey/survey-answer-match/survey-answer-match.scss
+++ b/src/main/webapp/app/survey/survey-answer-match/survey-answer-match.scss
@@ -4,6 +4,8 @@
   border: 1px solid #dee2e6;
   border-radius: 0.25rem; */
   width: 100%;
+  max-height: 80vh;
+  object-fit: contain;
   cursor: pointer;
   transition: opacity 0.2s;
 
